free proxies suck

--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -646,15 +646,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!playwright install-deps"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -805,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,6 +841,7 @@
     "            \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3538.102 Safari/537.36\"\n",
     "        }\n",
     "        self.ua = UserAgent()\n",
+    "        self.proxy = None\n",
     "        self.links = self.get_initial_links()\n",
     "        self.all_page_data = self.all_pages()\n",
     "\n",
@@ -879,10 +871,10 @@
     "        return links\n",
     "\n",
     "    def read_url_page(self, url: str) -> str:\n",
-    "        proxy = self.get_random_proxy()\n",
     "        self.get_random_user_agent()\n",
     "        # response = requests.get(url, headers=self.headers)\n",
-    "        response = requests.get(url, headers=self.headers, proxies={\"https\": proxy, \"http\": proxy})\n",
+    "        response = requests.get(url, headers=self.headers, proxies={\"https\": self.proxy, \"http\": self.proxy})\n",
+    "        print(\"read page\", response.status_code)\n",
     "        response.raise_for_status()\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "        return soup.get_text(strip=True)\n",
@@ -892,12 +884,12 @@
     "        scrape google for the query with keyword based search\n",
     "        \"\"\"\n",
     "        # print(\"Searching Google...\")\n",
-    "        proxy = self.get_random_proxy()\n",
+    "        self.proxy = self.get_random_proxy()\n",
     "        self.get_random_user_agent()\n",
-    "        response = requests.get(self.URL, headers=self.headers, proxies={\"https\": proxy, \"http\": proxy}) #\"https\": proxy, \n",
+    "        response = requests.get(self.URL, headers=self.headers, proxies={\"https\": self.proxy, \"http\": self.proxy}) #\"https\": proxy, \n",
+    "        print(\"inital links\", response.status_code)\n",
     "        # response = requests.get(self.URL, headers=self.headers)\n",
     "        # Print the response status and content for debugging\n",
-    "        print(proxy)\n",
     "        code429 = 0\n",
     "        while True:\n",
     "            if response.status_code in [429, 400]:\n",
@@ -918,7 +910,6 @@
     "                break\n",
     "\n",
     "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "        print(soup)\n",
     "        anchors = soup.find_all(\"a\", href=True)\n",
     "        return self.clean_urls(anchors)\n",
     "\n",
@@ -1062,53 +1053,6 @@
     "answer_prompt = f\"\"\"Given the following text, extract the fund names.\n",
     "                    Only output a list of the fund names.\\n\\n{context}\"\"\"\n",
     "company_execs.append(llm.complete(answer_prompt).text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "page_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'67.43.228.254:2679'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FreeProxy(https=True, google=True, country_id=['US', 'GB', 'CA', 'AU'], timeout=2.0).get(repeat=False)"
    ]
   },
   {
