--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -1564,6 +1564,10 @@
       "[ERROR] 🚫 Failed to crawl https://www.loomissayles.com/internet/internetdata.nsf/files/GrowthFund-FactSheet.pdf/$file/GrowthFund-FactSheet.pdf, error: Failed to crawl https://www.loomissayles.com/internet/internetdata.nsf/files/GrowthFund-FactSheet.pdf/$file/GrowthFund-FactSheet.pdf: Page.goto: net::ERR_ABORTED at https://www.loomissayles.com/internet/internetdata.nsf/files/GrowthFund-FactSheet.pdf/$file/GrowthFund-FactSheet.pdf\n",
       "Call log:\n",
       "navigating to \"https://www.loomissayles.com/internet/internetdata.nsf/files/GrowthFund-FactSheet.pdf/$file/GrowthFund-FactSheet.pdf\", waiting until \"domcontentloaded\"\n",
+      "\n",
+      "[ERROR] 🚫 Failed to crawl https://www.morganstanley.com/content/dam/msdotcom/en/wealth/investmentsolutions/pdfs/adv/tcwadv.pdf, error: Failed to crawl https://www.morganstanley.com/content/dam/msdotcom/en/wealth/investmentsolutions/pdfs/adv/tcwadv.pdf: Page.goto: Timeout 60000ms exceeded.\n",
+      "Call log:\n",
+      "navigating to \"https://www.morganstanley.com/content/dam/msdotcom/en/wealth/investmentsolutions/pdfs/adv/tcwadv.pdf\", waiting until \"domcontentloaded\"\n",
       "\n"
      ]
     }
@@ -1659,51 +1663,6 @@
     "\n",
     "    context_results.append(contexts)\n",
     "    results.append(company_execs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_results=5\n",
-    "num_words=2000\n",
-    "return_prompt=f\"\"\"What is the 10-year return for {a_qual}?\"\"\"\n",
-    "return_query = f\"{return_prompt} {query_qualifier}\"\n",
-    "context = get_url_info(return_query, num_results=num_results, num_words=num_words)\n",
-    "contexts.append(a + \" \" + return_query + \"\\n\" + context)\n",
-    "# answer_prompt = f\"\"\"Given the following text, extract the 10-year return for {a_qual}.\n",
-    "answer_prompt = f\"\"\"Given the following text, what is the 10-year return for {a_qual}?\n",
-    "                    Only output the return.\\n\\nText:\\n{context}\"\"\"\n",
-    "company_execs.append(llm.complete(answer_prompt).text)\n",
-    "\n",
-    "funds_prompt = f\"\"\"What are the key funds for {a_qual}?\"\"\"\n",
-    "funds_query = f\"{funds_prompt} {query_qualifier}\"\n",
-    "context = get_url_info(funds_query, num_results=3, num_words=num_words, description_only=False)\n",
-    "contexts.append(a + \" \" + funds_query + \"\\n\" + context)\n",
-    "# answer_prompt = f\"\"\"Given the following text, extract the names of the funds for {a_qual}.\n",
-    "answer_prompt = f\"\"\"Given the following text, what are the names of the funds for {a_qual}?\n",
-    "                    Only output the names.\\n\\nText:\\n{context}\"\"\"\n",
-    "company_execs.append(llm.complete(answer_prompt).text)\n",
-    "\n",
-    "aum_prompt = f\"\"\"What is the total Assets Under Management (AUM) in USD for {a_qual}?\"\"\"\n",
-    "aum_query = f\"{aum_prompt} {query_qualifier}\"\n",
-    "context = get_url_info(aum_query, num_results=num_results, num_words=1000)\n",
-    "contexts.append(a + \" \" + aum_query + \"\\n\" + context)\n",
-    "# answer_prompt = f\"\"\"Given the following text, extract the total Assets Under Management (AUM) for {a_qual}.\n",
-    "answer_prompt = f\"\"\"Given the following text, what is the current total Assets Under Management (AUM) at {a_qual}?\n",
-    "                    Only output the total AUM.\\n\\nText:\\n{context}\"\"\"\n",
-    "company_execs.append(llm.complete(answer_prompt).text)\n",
-    "\n",
-    "address_prompt = f\"\"\"What is the primary address for {a_qual}?\"\"\"\n",
-    "address_query = f\"{address_prompt} {query_qualifier}\"\n",
-    "context = get_url_info(address_query, num_results=num_results, num_words=500)\n",
-    "contexts.append(a + \" \" + address_query + \"\\n\" + context)\n",
-    "# answer_prompt = f\"\"\"Given the following text, extract the primary address for {a_qual}.\n",
-    "answer_prompt = f\"\"\"Given the following text, what is the primary address for {a_qual}?\n",
-    "                    Only output the address.\\n\\nText:\\n{context}\"\"\"\n",
-    "company_execs.append(llm.complete(answer_prompt).text)"
    ]
   },
   {
