submitted results to John

--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -1288,7 +1288,7 @@
     "        for url in search(query, \n",
     "                          sleep_interval=random.randint(2, 5), \n",
     "                          num_results=num_results,\n",
-    "                          timeout=100,\n",
+    "                          timeout=1000,\n",
     "                          advanced=True):\n",
     "            if description_only:\n",
     "                urls.append(url.description)\n",
@@ -1314,7 +1314,7 @@
     "\n",
     "    return context\n",
     "\n",
-    "def make_csv(results, filename, header, verbose=True):\n",
+    "def make_csv(results, filename, header=None, verbose=True):\n",
     "    # Check if the file exists\n",
     "    file_exists = os.path.isfile(filename)\n",
     "\n",
@@ -1323,7 +1323,7 @@
     "        writer = csv.writer(file)\n",
     "        \n",
     "        # Write the header only if the file does not exist\n",
-    "        if not file_exists:\n",
+    "        if not file_exists and header is not None:\n",
     "            writer.writerow(header)\n",
     "        \n",
     "        # Write each row to the CSV file\n",
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,11 +1512,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leftovers = list(set(asset_list) - set(data['Company Name'].values.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "asset_list.index(\"Garcia Hamilton\")"
+    "asset_list == data['Company Name'].values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming data is your DataFrame and asset_list is your list\n",
+    "data['Company Name'] = pd.Categorical(data['Company Name'], categories=asset_list, ordered=True)\n",
+    "data = data.sort_values('Company Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Company Name'].values.tolist()==asset_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asset_list.index(\"Todd Asset Mgmt.\")"
    ]
   },
   {
@@ -1537,8 +1595,9 @@
     "# query_qualifier = f\"after:{start_date} before:{end_date}\"\n",
     "results = []\n",
     "context_results = []\n",
+    "intermittent_save = []\n",
     "start_time = time.time()\n",
-    "for i,a in enumerate(asset_list[168:]):\n",
+    "for i,a in enumerate(leftovers):\n",
     "    item_start_time = time.time()\n",
     "    contexts = []\n",
     "    company_execs=[a]\n",
@@ -1593,11 +1652,14 @@
     "    answer_prompt = f\"\"\"Given the following text, what is the primary address for {a_qual}?\n",
     "                        Only output the address.\\n\\nText:\\n{context}\"\"\"\n",
     "    company_execs.append(llm.complete(answer_prompt).text)\n",
-    "\n",
+    "    intermittent_save.append(company_execs)\n",
+    "    \n",
     "    # Print the estimated remaining time at regular intervals\n",
     "    if i % 14 == 0 or i == len(asset_list) - 1:\n",
     "        # Periodically save results\n",
-    "        make_csv(results, filename, header, verbose=True)\n",
+    "        header = [\"Company Name\"]+exec_strs if os.path.exists(filename) else None\n",
+    "        make_csv(intermittent_save, filename, header=None, verbose=True)\n",
+    "        intermittent_save = []\n",
     "        # Record the time after processing the current item\n",
     "        item_end_time = time.time()\n",
     "        # Calculate the average processing time per item\n",
@@ -1628,6 +1690,24 @@
     "for url in search(query, pause=random.randint(2, 5), stop=2):\n",
     "    urls.append(url)\n",
     "print(len(urls))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_csv(results, filename, header=None, verbose=True)"
    ]
   },
   {
