--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -1265,8 +1265,8 @@
     "            content.append(result)\n",
     "    return content\n",
     "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     content = asyncio.run(main())"
+    "if __name__ == \"__main__\":\n",
+    "    content = asyncio.run(main())"
    ]
   },
   {
