--- a/summarizing.ipynb
+++ b/summarizing.ipynb
@@ -1251,6 +1251,10 @@
     "import nest_asyncio\n",
     "import asyncio\n",
     "from fake_useragent import UserAgent\n",
+    "# https://pypi.org/project/googlesearch-python/\n",
+    "from googlesearch import search\n",
+    "import csv\n",
+    "import random\n",
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
@@ -1266,19 +1270,8 @@
     "    return content\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    content = asyncio.run(main())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://pypi.org/project/googlesearch-python/\n",
-    "from googlesearch import search\n",
-    "import csv\n",
-    "import random\n",
+    "    content = asyncio.run(main())\n",
+    "\n",
     "\n",
     "def get_url_info(queries, num_results=3, num_words=2000, description_only=True):\n",
     "    urls = []\n",
