--- a/proxy_scraping.ipynb
+++ b/proxy_scraping.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,21 +312,26 @@
     "    \n",
     "\n",
     "counter = 0\n",
-    "for _ in range(200):\n",
+    "start_time = time.time()\n",
+    "hits = 200\n",
+    "for i in range(hits):\n",
     "    scraper = ProxyWebScraper(dest_url=\"https://praxissolutions.com\", api_key=scrapingbee_key, verbose=False)\n",
     "    response = scraper.send_request()\n",
     "    links = scraper.get_links(response)\n",
     "    sub_links = scraper.get_sub_links(links)\n",
     "    counter += 1\n",
-    "    time.sleep(random.randint(2, 5))\n",
-    "    if np.random.choice([0, 1], p=[0.8, 0.2])==1:\n",
+    "    time.sleep(random.randint(2, 20))\n",
+    "    # While loop to simulate user behavior?\n",
+    "    if np.random.choice([0, 1], p=[0.7, 0.3])==1:\n",
     "        sub_link = random.choice(sub_links)\n",
     "        full_url = urllib.parse.urljoin(response.url, sub_link)\n",
     "        scraper.update_url(full_url)\n",
     "        sub_response = scraper.send_request()\n",
     "        counter += 1\n",
-    "    if counter%20==0:\n",
-    "        print(f\"Visited {counter} times.\")\n"
+    "    if i%20==0:\n",
+    "        end_time = time.time()\n",
+    "        print(f\"Round {i} - {counter} credits used.\\n   Time elapsed: {np.round((end_time-start_time)/60, 2)}.\\n   Time remaining: {np.round((end_time-start_time)/60/counter*(hits-i), 2)}\")\n",
+    "print(f\"{counter} total credits used.\")"
    ]
   },
   {
@@ -335,7 +340,271 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "100000"
+    "import time, os, json\n",
+    "import aiohttp\n",
+    "import asyncio\n",
+    "import urllib.parse\n",
+    "from bs4 import BeautifulSoup\n",
+    "from fake_useragent import UserAgent\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "scrapingbee_key = os.getenv(\"SCRAPINGBEE_API_KEY\")\n",
+    "\n",
+    "class ProxyWebScraper:\n",
+    "    def __init__(self, dest_url, api_key, verbose=False):\n",
+    "        self.verbose = verbose\n",
+    "        self.api_key = api_key\n",
+    "        self.dest_url = dest_url\n",
+    "        self.ua = UserAgent()\n",
+    "        self.headers = {\"User-Agent\": self.ua.random}\n",
+    "\n",
+    "    async def send_request(self, session):\n",
+    "        try:\n",
+    "            async with session.get(\n",
+    "                url=\"https://app.scrapingbee.com/api/v1\",\n",
+    "                params={\n",
+    "                    \"url\": self.dest_url,\n",
+    "                    \"api_key\": self.api_key,\n",
+    "                    \"render_js\": 'false',\n",
+    "                },\n",
+    "                headers=self.headers\n",
+    "            ) as response:\n",
+    "                response.raise_for_status()\n",
+    "                if self.verbose:\n",
+    "                    print(f'Response HTTP Status Code: {response.status}')\n",
+    "                    print(f'Response HTTP Response Body: {await response.text()}')\n",
+    "                return await response.text()\n",
+    "        except aiohttp.ClientError as e:\n",
+    "            print(f'HTTP Request failed: {e}')\n",
+    "            return None\n",
+    "\n",
+    "    def get_links(self, response_text):\n",
+    "        if response_text is None:\n",
+    "            return []\n",
+    "        soup = BeautifulSoup(response_text, 'html.parser')\n",
+    "        return soup.find_all('a', href=True)\n",
+    "\n",
+    "    def get_sub_links(self, links):\n",
+    "        domain_name = urllib.parse.urlsplit(self.dest_url).netloc\n",
+    "        return [link['href'] for link in links if domain_name in link['href']]\n",
+    "    \n",
+    "    def update_url(self, new_url):\n",
+    "        self.dest_url = new_url\n",
+    "        return None\n",
+    "    \n",
+    "def send_request():\n",
+    "    response = requests.get(\n",
+    "        url=\"https://app.scrapingbee.com/api/v1/usage\",\n",
+    "        params={\n",
+    "            \"api_key\": \"6D5M0NNTHGA1A7PU7O5T4I5N62BHYV2PH3T7NIFZD6YENV69N55KTPCCYJR5AAKDOPCIBNFIQERIZE75\",\n",
+    "        },\n",
+    "\n",
+    "    )\n",
+    "    # print('   Response HTTP Status Code: ', response.status_code)\n",
+    "    data_dict = json.loads(response.content)\n",
+    "    print(f'   API credits: {data_dict[\"used_api_credit\"]}/{data_dict[\"max_api_credit\"]}')\n",
+    "    print(f'   Concurrency: {data_dict[\"current_concurrency\"]}/{data_dict[\"max_concurrency\"]}')\n",
+    "\n",
+    "async def main(concurrent_requests=4):\n",
+    "    counter = 0\n",
+    "    start_time = time.time()\n",
+    "    hits = 20\n",
+    "    connector = aiohttp.TCPConnector(limit=concurrent_requests)\n",
+    "    async with aiohttp.ClientSession(connector=connector) as session:\n",
+    "        for i in range(hits):\n",
+    "            scraper = ProxyWebScraper(dest_url=\"https://praxissolutions.com\", api_key=scrapingbee_key, verbose=False)\n",
+    "            response_text = await scraper.send_request(session)\n",
+    "            links = scraper.get_links(response_text)\n",
+    "            sub_links = scraper.get_sub_links(links)\n",
+    "            counter += 1\n",
+    "            await asyncio.sleep(random.randint(2, 5))  # Sleep after the main request\n",
+    "            if np.random.choice([0, 1], p=[0.7, 0.3]) == 1:\n",
+    "                sub_link = random.choice(sub_links)\n",
+    "                full_url = urllib.parse.urljoin(scraper.dest_url, sub_link)\n",
+    "                scraper.update_url(full_url)\n",
+    "                await asyncio.sleep(random.randint(1, 3))  # Sleep before the sub-request\n",
+    "                sub_response_text = await scraper.send_request(session)\n",
+    "                counter += 1\n",
+    "            if i % 10 == 0:\n",
+    "                end_time = time.time()\n",
+    "                print(f\"Round {i} -- {counter} credits used.\\n   Time elapsed: {np.round((end_time-start_time)/60, 2)}.\\n   Time remaining: {np.round((end_time-start_time)/60/counter*(hits-i), 2)}\")\n",
+    "                send_request()\n",
+    "\n",
+    "    print(f\"{counter} total credits used.\")\n",
+    "    print(f\"Total Time elapsed: {np.round((time.time()-start_time)/60, 2)}\")\n",
+    "\n",
+    "# Run the main function\n",
+    "await main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round 0\n",
+      "   Time elapsed: 0.16.\n",
+      "   Time remaining: 1.61\n",
+      "   API credits: 385/1000\n",
+      "   Concurrency: 0/5\n",
+      "\n",
+      "Round 10\n",
+      "   Time elapsed: 1.23.\n",
+      "   Time remaining: 0.77\n",
+      "   API credits: 396/1000\n",
+      "   Concurrency: 0/5\n",
+      "\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "Ending stats:\n",
+      "  Concurrency: 0/5\n",
+      "  API credits: 409/1000\n",
+      "  Total credits used: 24\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'start_time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 117\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m  API credits: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_api_credit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Total credits used: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m-\u001b[39mbegin[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Total Time elapsed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mround((time\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;241m-\u001b[39m\u001b[43mstart_time\u001b[49m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m60\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'start_time' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import time, os, json\n",
+    "import aiohttp\n",
+    "import asyncio\n",
+    "import urllib.parse\n",
+    "from bs4 import BeautifulSoup\n",
+    "from fake_useragent import UserAgent\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import requests\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "import asyncio\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "scrapingbee_key = os.getenv(\"SCRAPINGBEE_API_KEY\")\n",
+    "\n",
+    "class ProxyWebScraper:\n",
+    "    def __init__(self, dest_url, api_key, verbose=False):\n",
+    "        self.verbose = verbose\n",
+    "        self.api_key = api_key\n",
+    "        self.dest_url = dest_url\n",
+    "        self.ua = UserAgent()\n",
+    "        self.headers = {\"User-Agent\": self.ua.random}\n",
+    "\n",
+    "    async def send_request(self, session):\n",
+    "        try:\n",
+    "            async with session.get(\n",
+    "                url=\"https://app.scrapingbee.com/api/v1\",\n",
+    "                params={\n",
+    "                    \"url\": self.dest_url,\n",
+    "                    \"api_key\": self.api_key,\n",
+    "                    \"render_js\": 'false',\n",
+    "                },\n",
+    "                headers=self.headers\n",
+    "            ) as response:\n",
+    "                response.raise_for_status()\n",
+    "                if self.verbose:\n",
+    "                    print(f'Response HTTP Status Code: {response.status}')\n",
+    "                    print(f'Response HTTP Response Body: {await response.text()}')\n",
+    "                return await response.text()\n",
+    "        except aiohttp.ClientError as e:\n",
+    "            print(f'HTTP Request failed: {e}')\n",
+    "            return None\n",
+    "\n",
+    "    def get_links(self, response_text):\n",
+    "        if response_text is None:\n",
+    "            return []\n",
+    "        soup = BeautifulSoup(response_text, 'html.parser')\n",
+    "        return soup.find_all('a', href=True)\n",
+    "\n",
+    "    def get_sub_links(self, links):\n",
+    "        domain_name = urllib.parse.urlsplit(self.dest_url).netloc\n",
+    "        return [link['href'] for link in links if domain_name in link['href']]\n",
+    "    \n",
+    "    def update_url(self, new_url):\n",
+    "        self.dest_url = new_url\n",
+    "        return None\n",
+    "    \n",
+    "def send_request(api_key, verbose=True):\n",
+    "    response = requests.get(\n",
+    "        url=\"https://app.scrapingbee.com/api/v1/usage\",\n",
+    "        params={\n",
+    "            \"api_key\": api_key,\n",
+    "        },\n",
+    "\n",
+    "    )\n",
+    "    # print('   Response HTTP Status Code: ', response.status_code)\n",
+    "    data_dict = json.loads(response.content)\n",
+    "    if verbose: \n",
+    "        print(f'   API credits: {data_dict[\"used_api_credit\"]}/{data_dict[\"max_api_credit\"]}')\n",
+    "        print(f'   Concurrency: {data_dict[\"current_concurrency\"]}/{data_dict[\"max_concurrency\"]}')\n",
+    "        return None\n",
+    "    else:\n",
+    "        return data_dict\n",
+    "\n",
+    "async def main(concurrent_requests=4, hits=20, print_every=10):\n",
+    "    counter = 0\n",
+    "    start_time = time.time()\n",
+    "    connector = aiohttp.TCPConnector(limit=concurrent_requests)\n",
+    "    async with aiohttp.ClientSession(connector=connector) as session:\n",
+    "        for i in range(hits):\n",
+    "            scraper = ProxyWebScraper(dest_url=\"https://praxissolutions.com\", api_key=scrapingbee_key, verbose=False)\n",
+    "            response_text = await scraper.send_request(session)\n",
+    "            links = scraper.get_links(response_text)\n",
+    "            sub_links = scraper.get_sub_links(links)\n",
+    "            counter += 1\n",
+    "            del response_text\n",
+    "            await asyncio.sleep(random.randint(2, 5))  # Sleep after the main request\n",
+    "            if np.random.choice([0, 1], p=[0.7, 0.3]) == 1:\n",
+    "                while True:\n",
+    "                    sub_link = random.choice(sub_links)\n",
+    "                    full_url = urllib.parse.urljoin(scraper.dest_url, sub_link)\n",
+    "                    scraper.update_url(full_url)\n",
+    "                    await asyncio.sleep(random.randint(1, 3))  # Sleep before the sub-request\n",
+    "                    _ = await scraper.send_request(session)\n",
+    "                    counter += 1\n",
+    "                    \n",
+    "                    if np.random.choice([0, 1], p=[0.5, 0.5]) == 1:\n",
+    "                        break\n",
+    "            if i % print_every == 0:\n",
+    "                end_time = time.time()\n",
+    "                print(f\"Round {i}\\n   Time elapsed: {np.round((end_time-start_time)/60, 2)}.\\n   Time remaining: {np.round((end_time-start_time)/60/counter*(hits-i), 2)}\")\n",
+    "                send_request(scrapingbee_key)\n",
+    "                print()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    start_time = time.time()\n",
+    "    begin = send_request(scrapingbee_key, verbose=False)\n",
+    "    asyncio.run(main())\n",
+    "    fin = send_request(scrapingbee_key, verbose=False)\n",
+    "    print()\n",
+    "    print('--'*30)\n",
+    "    print('Ending stats:')\n",
+    "    print(f'  Concurrency: {fin[\"current_concurrency\"]}/{fin[\"max_concurrency\"]}')\n",
+    "    print(f'  API credits: {fin[\"used_api_credit\"]}/{fin[\"max_api_credit\"]}')\n",
+    "    print(f\"  Total credits used: {fin['used_api_credit']-begin['used_api_credit']}\")\n",
+    "    print(f\"  Total Time elapsed: {np.round((time.time()-start_time)/60, 2)}\")"
    ]
   },
   {
