--- a/proxy_scraping.ipynb
+++ b/proxy_scraping.ipynb
@@ -443,42 +443,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 0\n",
-      "   Time elapsed: 0.16.\n",
-      "   Time remaining: 1.61\n",
-      "   API credits: 385/1000\n",
-      "   Concurrency: 0/5\n",
-      "\n",
-      "Round 10\n",
-      "   Time elapsed: 1.23.\n",
-      "   Time remaining: 0.77\n",
-      "   API credits: 396/1000\n",
-      "   Concurrency: 0/5\n",
-      "\n",
+      "Initial credits: 1742/1000000\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/our-services/consulting-services/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/about-us/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "https://praxissolutions.com/\n",
+      "Completed 20 requests.\n",
       "\n",
       "------------------------------------------------------------\n",
       "Ending stats:\n",
-      "  Concurrency: 0/5\n",
-      "  API credits: 409/1000\n",
-      "  Total credits used: 24\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'start_time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 117\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m  API credits: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_api_credit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Total credits used: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfin[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m-\u001b[39mbegin[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mused_api_credit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Total Time elapsed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mround((time\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;241m-\u001b[39m\u001b[43mstart_time\u001b[49m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m60\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'start_time' is not defined"
+      "  API credits: 1762/1000000\n",
+      "  Total credits used: 20\n",
+      "  Total Time elapsed: 0.34\n"
      ]
     }
    ],
@@ -508,11 +507,13 @@
     "        self.verbose = verbose\n",
     "        self.api_key = api_key\n",
     "        self.dest_url = dest_url\n",
+    "        print(dest_url)\n",
     "        self.ua = UserAgent()\n",
     "        self.headers = {\"User-Agent\": self.ua.random}\n",
     "\n",
-    "    async def send_request(self, session):\n",
+    "    async def send_request(self, session, sleep=True):\n",
     "        try:\n",
+    "            if sleep: await asyncio.sleep(random.randint(2, 5))  # Sleep before making the request\n",
     "            async with session.get(\n",
     "                url=\"https://app.scrapingbee.com/api/v1\",\n",
     "                params={\n",
@@ -562,78 +563,80 @@
     "    else:\n",
     "        return data_dict\n",
     "\n",
+    "\n",
     "async def main(concurrent_requests=4, hits=20, print_every=10):\n",
-    "    counter = 0\n",
-    "    start_time = time.time()\n",
+    "    # sub_counter = 0\n",
+    "    # sub_sub_counter = 0\n",
+    "    # start_time = time.time()\n",
+    "    praxis_urls = ['https://praxissolutions.com/', ['https://praxissolutions.com/our-services/', 'https://praxissolutions.com/our-services/consulting-services/', 'https://praxissolutions.com/our-process/custom-solutions/', 'https://praxissolutions.com/our-services/collaborative-solutions/', 'https://praxissolutions.com/about-us/', 'https://praxissolutions.com/our-team/', 'https://praxissolutions.com/our-process/', 'https://praxissolutions.com/media/', 'https://praxissolutions.com/our-services/', 'https://praxissolutions.com/our-services/consulting-services/', 'https://praxissolutions.com/our-process/custom-solutions/', 'https://praxissolutions.com/our-services/collaborative-solutions/', 'https://praxissolutions.com/about-us/', 'https://praxissolutions.com/our-team/', 'https://praxissolutions.com/our-process/', 'https://praxissolutions.com/media/', 'https://praxissolutions.com/our-services/', 'https://praxissolutions.com/our-services/consulting-services/', 'https://praxissolutions.com/our-process/custom-solutions/', 'https://praxissolutions.com/our-services/collaborative-solutions/', 'https://praxissolutions.com/about-us/', 'https://praxissolutions.com/our-team/', 'https://praxissolutions.com/our-process/', 'https://praxissolutions.com/media/', 'https://praxissolutions.com/our-team/', 'https://praxissolutions.com/contact-us/', 'https://praxissolutions.com/contact-us/', 'https://praxissolutions.com/']]\n",
+    "    \n",
     "    connector = aiohttp.TCPConnector(limit=concurrent_requests)\n",
     "    async with aiohttp.ClientSession(connector=connector) as session:\n",
-    "        for i in range(hits):\n",
-    "            scraper = ProxyWebScraper(dest_url=\"https://praxissolutions.com\", api_key=scrapingbee_key, verbose=False)\n",
-    "            response_text = await scraper.send_request(session)\n",
-    "            links = scraper.get_links(response_text)\n",
-    "            sub_links = scraper.get_sub_links(links)\n",
-    "            counter += 1\n",
-    "            del response_text\n",
-    "            await asyncio.sleep(random.randint(2, 5))  # Sleep after the main request\n",
-    "            if np.random.choice([0, 1], p=[0.7, 0.3]) == 1:\n",
-    "                while True:\n",
-    "                    sub_link = random.choice(sub_links)\n",
-    "                    full_url = urllib.parse.urljoin(scraper.dest_url, sub_link)\n",
-    "                    scraper.update_url(full_url)\n",
-    "                    await asyncio.sleep(random.randint(1, 3))  # Sleep before the sub-request\n",
-    "                    _ = await scraper.send_request(session)\n",
-    "                    counter += 1\n",
+    "        tasks = []\n",
+    "        for _ in range(hits):\n",
+    "            rand_url = np.random.choice([0, 1], p=[0.8, 0.2])\n",
+    "            if rand_url==0:\n",
+    "                dest_url=praxis_urls[0]\n",
+    "            else:\n",
+    "                dest_url = np.random.choice(praxis_urls[1])\n",
+    "            scraper = ProxyWebScraper(dest_url=dest_url, api_key=scrapingbee_key, verbose=False)\n",
+    "            tasks.append(scraper.send_request(session))\n",
+    "\n",
+    "        responses = await asyncio.gather(*tasks)\n",
+    "        print(f\"Completed {hits} requests.\")\n",
+    "\n",
+    "    # del responses\n",
+    "    return None\n",
+    "        # for response_text in responses:\n",
+    "                \n",
+    "        #     scraper = ProxyWebScraper(dest_url=\"https://praxissolutions.com\", api_key=scrapingbee_key, verbose=False)\n",
+    "        #     links = scraper.get_links(response_text)\n",
+    "        #     sub_links = scraper.get_sub_links(links)\n",
+    "        #     print(f\"Sub-links: {sub_links}\")\n",
+    "        #     asdfasdfasdf\n",
+    "        #     del response_text\n",
+    "\n",
+    "        #     if np.random.choice([0, 1], p=[0.7, 0.3]) == 1:\n",
+    "        #         sub_tasks = []\n",
+    "        #         sub_counter+=1\n",
+    "        #         while sub_links:\n",
+    "        #             randidx = random.choice(range(len(sub_links)))\n",
+    "        #             sub_link = sub_links[randidx]\n",
+    "        #             del sub_links[randidx]\n",
+    "        #             full_url = urllib.parse.urljoin(scraper.dest_url, sub_link)\n",
+    "        #             scraper.update_url(full_url)\n",
+    "        #             sub_tasks.append(scraper.send_request(session, sleep=False))\n",
     "                    \n",
-    "                    if np.random.choice([0, 1], p=[0.5, 0.5]) == 1:\n",
-    "                        break\n",
-    "            if i % print_every == 0:\n",
-    "                end_time = time.time()\n",
-    "                print(f\"Round {i}\\n   Time elapsed: {np.round((end_time-start_time)/60, 2)}.\\n   Time remaining: {np.round((end_time-start_time)/60/counter*(hits-i), 2)}\")\n",
-    "                send_request(scrapingbee_key)\n",
-    "                print()\n",
+    "        #             if np.random.choice([0, 1], p=[0.5, 0.5]) == 1:\n",
+    "        #                 break\n",
+    "        #             else:\n",
+    "        #                 sub_sub_counter+=1\n",
+    "        #                 await asyncio.sleep(random.randint(1, 3))  # Sleep before the sub-request\n",
+    "                \n",
+    "        #         await asyncio.gather(*sub_tasks)\n",
+    "           \n",
+    "        # print()\n",
+    "        # print('--'*40)\n",
+    "        # print(f\"{sub_counter} sub-pages visited, {sub_sub_counter} extra sub-pages visited.\")\n",
+    "        # print('--'*40)\n",
+    "        # print()\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    start_time = time.time()\n",
     "    begin = send_request(scrapingbee_key, verbose=False)\n",
+    "    print(f\"Initial credits: {begin['used_api_credit']}/{begin['max_api_credit']}\")\n",
     "    asyncio.run(main())\n",
+    "    time.sleep(10)\n",
     "    fin = send_request(scrapingbee_key, verbose=False)\n",
     "    print()\n",
     "    print('--'*30)\n",
     "    print('Ending stats:')\n",
-    "    print(f'  Concurrency: {fin[\"current_concurrency\"]}/{fin[\"max_concurrency\"]}')\n",
+    "    # print(f'  Concurrency: {fin[\"current_concurrency\"]}/{fin[\"max_concurrency\"]}')\n",
     "    print(f'  API credits: {fin[\"used_api_credit\"]}/{fin[\"max_api_credit\"]}')\n",
     "    print(f\"  Total credits used: {fin['used_api_credit']-begin['used_api_credit']}\")\n",
     "    print(f\"  Total Time elapsed: {np.round((time.time()-start_time)/60, 2)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
