--- a/proxy_scraping.ipynb
+++ b/proxy_scraping.ipynb
@@ -513,7 +513,7 @@
     "\n",
     "    async def send_request(self, session, sleep=True):\n",
     "        try:\n",
-    "            if sleep: await asyncio.sleep(random.randint(2, 5))  # Sleep before making the request\n",
+    "            if sleep: await asyncio.sleep(random.randint(15, 50))  # Sleep before making the request\n",
     "            async with session.get(\n",
     "                url=\"https://app.scrapingbee.com/api/v1\",\n",
     "                params={\n",
@@ -564,7 +564,7 @@
     "        return data_dict\n",
     "\n",
     "\n",
-    "async def main(concurrent_requests=4, hits=20, print_every=10):\n",
+    "async def main(concurrent_requests=3, hits=100000):\n",
     "    # sub_counter = 0\n",
     "    # sub_sub_counter = 0\n",
     "    # start_time = time.time()\n",
