ollama and llamaindex tutorial

--- a/tutorials/ollama_llamaindex_tutorial.ipynb
+++ b/tutorials/ollama_llamaindex_tutorial.ipynb
@@ -494,15 +494,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Run multiple Ollama models \n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "\n",
@@ -553,7 +544,7 @@
    "outputs": [],
    "source": [
     "response = query_engine.query(\n",
-    "    \"What is the definition of 'Customer'?\",\n",
+    "    \"What is the definition of 'Account'?\",\n",
     ")\n",
     "print(response)\n"
    ]
