--- a/tutorials/ollama_llamaindex_tutorial.ipynb
+++ b/tutorials/ollama_llamaindex_tutorial.ipynb
@@ -90,9 +90,8 @@
     "    print(f\"Using OpenAI {model_name}...\")\n",
     "    llm = OpenAI(model=model_name, max_tokens=8000)\n",
     "    \n",
-    "addtion_kwargs = {\"max_new_tokens\": 8000}\n",
     "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
-    "                request_timeout=4000.0, additional_kwargs=addtion_kwargs)\n",
+    "                request_timeout=4000.0)\n",
     "print(llm.metadata)"
    ]
   },
@@ -102,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = llm.complete(\"What is the meaning of life?\")\n",
+    "response = llm.complete(\"Why is Praxis a good name for a company?\")\n",
     "print(response)"
    ]
   },
@@ -111,6 +110,18 @@
    "metadata": {},
    "source": [
     "### Convert any model to GGUF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download and install LLAMA.CPP (15-20 mins)\n",
+    "!cd /workspace/repos/ && git clone https://github.com/ggerganov/llama.cpp\n",
+    "!cd /workspace/repos/llama.cpp && git pull && make clean && LLAMA_CUDA=0 make\n",
+    "!chmod 755 /workspace/repos/llama.cpp/requirements.txt && pip3 install -r /workspace/repos/llama.cpp/requirements.txt"
    ]
   },
   {
@@ -141,25 +152,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download and install LLAMA.CPP (15-20 mins)\n",
-    "!cd /workspace/repos/ && git clone https://github.com/ggerganov/llama.cpp\n",
-    "!cd /workspace/repos/llama.cpp && git pull && make clean && LLAMA_CUDA=0 make\n",
-    "!chmod 755 /workspace/repos/llama.cpp/requirements.txt && pip3 install -r /workspace/repos/llama.cpp/requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer, AutoModel\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
     "save_dir = \"/workspace/data/new_embed_model\"\n",
     "\n",
-    "# tokenizer_name = \"HuggingFaceTB/SmolLM-135M-Instruct\"\n",
-    "# model_name = \"HuggingFaceTB/SmolLM-135M-Instruct\"\n",
+    "\n",
+    "# tokenizer_name = \"Qwen/Qwen2-1.5B\"\n",
+    "# model_name = \"dunzhang/stella_en_1.5B_v5\"\n",
     "tokenizer_name = \"mixedbread-ai/mxbai-embed-large-v1\"\n",
     "model_name = \"mixedbread-ai/mxbai-embed-large-v1\"\n",
     "\n",
@@ -246,6 +246,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://github.com/meta-llama/llama-recipes/tree/main/recipes/quickstart/NotebookLlama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# LlamaIndex"
    ]
   },
@@ -284,9 +291,8 @@
     "        except Exception as e: \n",
     "            print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
     "    \n",
-    "    addtion_kwargs = {\"max_new_tokens\": 8000}\n",
     "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
-    "                 request_timeout=4000.0, additional_kwargs=addtion_kwargs)\n",
+    "                 request_timeout=4000.0)\n",
     "    print(llm.metadata)\n"
    ]
   },
@@ -409,25 +415,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for node in nodes:\n",
+    "    print(node.relationships)\n",
+    "    print('-'*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# If the LLM is a closed model, then this becomes distillation\n",
     "result_collection = []\n",
     "for node in nodes:\n",
     "    result = llm.complete(f\"\"\"Create 5 questions with answers based on the text below.\n",
     "                              Answers should vary in length and complexity.\n",
-    "                              Include your reasoning for each answer.\n",
     "                              Return the questions in the following format:\n",
     "                              Q1: ...? \n",
     "                              A1: ... \n",
-    "                              Reasoning: ...\n",
     "                        \n",
     "                              Q2: ...? \n",
     "                              A2: ...\n",
-    "                              Reasoning: ...\n",
     "                              \n",
     "                              Text:\n",
     "                              {node.text}\"\"\")\n",
     "    result_collection.append(result.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -566,6 +587,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GraphRAG (neo4j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(run in terminal)\n",
+    "# NEO4J Install necessary packages\n",
+    "apt install dialog apt-utils -y\n",
+    "# Add Neo4j GPG key\n",
+    "wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "# Add Neo4j repository\n",
+    "echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
+    "# Update package list\n",
+    "apt update\n",
+    "# Fetch the latest Neo4j version number\n",
+    "LATEST_VERSION=$(apt list -a neo4j 2>/dev/null | grep neo4j | awk -F' ' '{print $2}' | sort -V | tail -n 1)\n",
+    "# Extract version number without epoch prefix\n",
+    "VERSION_NUMBER=$(echo $LATEST_VERSION | sed 's/^1://')\n",
+    "# Add universe repository\n",
+    "add-apt-repository universe -y\n",
+    "# Install the latest Neo4j version\n",
+    "apt install neo4j=$LATEST_VERSION -y\n",
+    "# Set debconf selections for Neo4j\n",
+    "echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
+    "echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
+    "# Install OpenJDK 17\n",
+    "apt install openjdk-17-jre -y\n",
+    "# Download the latest APOC plugin\n",
+    "cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/$VERSION_NUMBER/apoc-$VERSION_NUMBER-core.jar\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "entities = Literal[ \n",
+    "                   \"REGULATIONS\",\n",
+    "                   \"AGENCIES\"\n",
+    "]\n",
+    "\n",
+    "relations = Literal[\n",
+    "    \"REPLACES\",\n",
+    "    \"AMENDS\", \n",
+    "    \"REFERS_TO\",\n",
+    "    \"TYPE\"\n",
+    "]\n",
+    "\n",
+    "validation_schema = {\n",
+    "    \"Regulations\": [\"REPLACES\",\"AMENDS\",\"REFERS_TO\"],\n",
+    "    \"Agencies\": [\"TYPE\"],\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "from rag_utils import set_neo4j_password, add_lines_to_conf\n",
+    "\n",
+    "# Set password before starting the server\n",
+    "set_neo4j_password(os.getenv('NEO4J_PASSWORD'))\n",
+    "\n",
+    "###### START NEO4J SERVER ######\n",
+    "# in a separate terminal\n",
+    "# neo4j console \n",
+    "# or \n",
+    "# neo4j start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GraphRAG Database\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
+    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query, dump_neo4j_database\n",
+    "import random\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "access_token = os.getenv('HF_TOKEN')\n",
+    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
+    "\n",
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_testfull\"\n",
+    "graph_store_persist_dir= None\n",
+    "\n",
+    "Settings.chunk_size = 500\n",
+    "Settings.chunk_overlap = 20\n",
+    "\n",
+    "llm.is_function_calling_model = False\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic, referential, and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
+    "\n",
+    "kg_extractor = SchemaLLMPathExtractor(\n",
+    "    llm=llm,\n",
+    "    extract_prompt=extract_prompt,\n",
+    "    possible_entities=entities,\n",
+    "    possible_relations=relations,\n",
+    "    kg_validation_schema=validation_schema,\n",
+    "    strict=False,  # if false, will allow triples outside of the schema you defined\n",
+    "    num_workers=10,\n",
+    "    max_triplets_per_chunk=10,\n",
+    ")\n",
+    "\n",
+    "# kg_extractor = SimpleLLMPathExtractor(\n",
+    "#         extract_prompt=extract_prompt,\n",
+    "#         llm=llm,\n",
+    "#         max_paths_per_chunk=10,\n",
+    "#         num_workers=6,\n",
+    "#     )\n",
+    "\n",
+    "print(\"Creating graph store...\")\n",
+    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
+    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
+    "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
+    "\n",
+    "if not os.path.exists(graph_idx_persist_dir):\n",
+    "    print(\"Deleting all nodes and relationships...\")\n",
+    "    neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
+    "\n",
+    "print(\"Creating graphrag index...\")\n",
+    "graph_index = create_neo4j_graphrag(documents, llm, embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=3)\n",
+    "\n",
+    "dump_neo4j_database('neo4j', '/workspace/data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -586,7 +756,7 @@
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "import subprocess, os\n",
+    "import subprocess, os, re\n",
     "from llama_index.core import Settings\n",
     "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.llms.openai import OpenAI as LOpenAI\n",
@@ -613,14 +783,7 @@
     "\n",
     "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.llms.openai import OpenAI as LOpenAI\n",
-    "from rag_utils import create_llama_vector_index_rag\n",
     "\n",
-    "import os\n",
-    "import xml.etree.ElementTree as ET\n",
-    "from sec_utils import get_tree_data, get_metadata\n",
-    "from llamaindex_data_utils import extract_text_from_pdf\n",
-    "\n",
-    "import os, re\n",
     "from llama_index.readers.file import PDFReader\n",
     "from llama_index.core import Document\n",
     "from llama_index.core.node_parser import SentenceSplitter\n",
@@ -655,6 +818,10 @@
     "    summaries: list\n",
     "\n",
     "class RuleSummarizationFlow(Workflow):\n",
+    "    # Each function in the workflow takes in a single Event and returns a single Event.\n",
+    "    # The function name is the name of the Event it takes in.\n",
+    "    # The return type is the name of the Event it returns. It can return one of multiple types of Events.\n",
+    "\n",
     "\n",
     "    # Similar to __init__, but for workflows\n",
     "    @step\n",
@@ -684,9 +851,11 @@
     "        for i in range(len(documents_proposal)):\n",
     "            documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
     "            \n",
-    "        # Global state context\n",
+    "        # Chat can retain a state of memory\n",
     "        ctx.data[\"chat_llm\"] = SimpleChatEngine.from_defaults(llm=ctx.data[\"expert_llm\"])\n",
+    "        # Summarizer\n",
     "        ctx.data[\"summarizer_llm\"] = TreeSummarize(llm=ctx.data[\"expert_llm\"], verbose=False)\n",
+    "        # Data\n",
     "        ctx.data[\"new_rule_documents\"] = documents_proposal\n",
     "        \n",
     "        ctx.data[\"initialized\"] = True\n",
