--- a/tutorials/ollama_llamaindex_tutorial.ipynb
+++ b/tutorials/ollama_llamaindex_tutorial.ipynb
@@ -270,9 +270,9 @@
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
     "# model_name, ctx_len = \"gpt-4o-2024-08-06\", 128000\n",
-    "# model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
+    "model_name, ctx_len = \"llama3.1:8b-instruct-q8_0\", 128000\n",
     "# model_name, ctx_len = \"bespoke-minicheck\", 32000\n",
-    "model_name, ctx_len = \"qwen2.5:3b-instruct-q8_0\", 128000\n",
+    "# model_name, ctx_len = \"qwen2.5:3b-instruct-q8_0\", 128000\n",
     "\n",
     "if \"gpt-4o\" in model_name:\n",
     "    openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
